Align fixesand slight read.me update

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   padding: 0;
@@ -5,8 +6,11 @@
 }
 body {
   height: 100%;
-  color: #bab2b5;
+  color: white;
   font-weight: bold;
+}
+.dark-mode {
+  filter: invert(100%);
 }
 #h2 {
   font-weight: bolder;
@@ -15,18 +19,21 @@ body {
 #page-content {
   flex: 1 0 auto;
 }
+.footer {
+  opacity: 90%;
+}
 #sticky-footer {
-  /* opacity: 40%; */
   color: black;
   margin-bottom: 25px;
   opacity: 60%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0);
 }
 .float-left {
   margin: 25px;
 }
-.backgroundimg {
-  background-image: url(img/OLIVER.jpg);
+.backgroundImg {
+  /* background-image: url(https://source.unsplash.com/user/erondu/1600x911); */
+  background-color: rgba(148, 148, 148, 0.603);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -39,9 +46,52 @@ body {
   margin-bottom: 25px;
   margin-top: 25px;
 }
+.navbar {
+  font-weight: bolder;
+  
+}
+#bottom_fade {
+	z-index: 99;
+	position: fixed;
+	bottom: 0%;
+	background-image: url("bottom-fade.png");
+}
+
+
+/* .flip-scale-up-hor {
+	-webkit-animation: flip-scale-up-hor 0.5s linear both;
+	        animation: flip-scale-up-hor 0.5s linear both;
+} */
 /* Other Classes for Page Styling */
-body {
-  background: linear-gradient(to left, #d6d6d6, #51b9ff);
+body,.css-selector, .navbar, .jumbotron {
+  background: linear-gradient(88deg, #51b9ff, #5dbcd2);
+  background-size: 400% 400%;
+  -webkit-animation: AnimationName 30s ease infinite;
+  -moz-animation: AnimationName 30s ease infinite;
+  -o-animation: AnimationName 30s ease infinite;
+  animation: AnimationName 30s ease infinite;
+  -webkit-animation: flip-scale-up-hor 0.5s linear both;
+	        animation: flip-scale-up-hor 0.5s linear both;
+}
+@-webkit-keyframes AnimationName {
+  0%{background-position:0% 51%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 51%}
+}
+@-moz-keyframes AnimationName {
+  0%{background-position:0% 51%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 51%}
+}
+@-o-keyframes AnimationName {
+  0%{background-position:0% 51%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 51%}
+}
+@keyframes AnimationName {
+  0%{background-position:0% 51%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 51%}
 }
 .img-thumbnail {
   display: block;
@@ -70,15 +120,18 @@ body {
   border-radius: 11px;
 }
 .p1 {
-  width: 60%;
+  width: 70%;
 }
 
 .p2 {
-  width: 40%;
+  width: 70%;
 }
 
 .p3 {
-  width: 20%;
+  width: 50%;
+}
+.p4 {
+  width: 40%;
 }
 .progress-bar span {
   float: right;
@@ -86,6 +139,58 @@ body {
   line-height: 13px;
   color: #fff;
   font-size: 12px;
+}
+#pageFooter {
+  background-color: black;
+}
+@media only screen and (max-width: 480px){
+  .img{
+      height:auto !important;
+      max-width:60px !important;
+      width: 100% !important;
+  }
+}
+
+.jumbotron {
+  text-align: center;
+  background: #1a2a6c;  /* fallback for old browsers */
+ 
+  background: -webkit-linear-gradient(to right,#d6d6d6, #51b9ff);  /* Chrome 10-25, Safari 5.1-6 */
+ 
+  background: linear-gradient(to right,  #51b9ff,#d6d6d6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ 
+ 
+  color: rgba(32, 32, 32, 0.781);
+
+}
+hr {
+  border: none;
+  height: 1px;
+  /* Set the hr color */
+  color: #333; /* old IE */
+  background-color: #333; /* Modern Browsers */
+}
+.display-4 {
+  font-weight: bold;
+}
+
+.list-unstyled {
+  color: white;
+}
+a {
+  color: blue;
+}
+a:hover {
+  color: pink;
+}
+#htmlIcon {
+  color: red;
+}
+#cssIcon {
+  color: blue;
+}
+#jsIcon {
+  color: yellow;
 }
 
 @media (min-width: 768px) {
@@ -100,12 +205,16 @@ body {
     padding-right: 10px;
     padding-left: 10px;
   }
+  .button {
+    align-content: center;
+  }
 }
 @media (max-width: 600px) {
   .img {
     width: 100px;
     align-content: center;
   }
+  
 }
 
 /* @media (max-width: @screen-xs-max) { ... }
